--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,8 @@ dependencies:
   firebase_auth: ^4.15.2
   firebase_storage: ^11.5.5
   cloud_firestore: ^4.13.5
-#  firebase_core: ^2.5.3
+  firebase_core: ^2.5.3
+  fk_toggle: ^0.1.4
 
 dev_dependencies:
   flutter_test:
